gforge (3.0-9+1) unstable; urgency=low

  * [Roland] Patch #558 from Patrick McFarland to fix hardwiring problem
    in install-db.sh.

 -- Roland Mas <lolando@debian.org>  Sun, 19 Oct 2003 21:55:23 +0200

gforge (3.0-9) unstable; urgency=low

  * [Roland] New CVS snapshot, including fix for a bug that prevented
    e-mails to be sent with the passwords for new mailing-lists at their
    creation.

 -- Roland Mas <lolando@debian.org>  Fri, 10 Oct 2003 12:23:09 +0200

gforge (3.0-8) unstable; urgency=low

  * [Roland] Fixed redirection URL for Mailman.
  * [Roland] Made the create-vhosts cronjob silent.
  * [Roland] Removed duplicate colon from PHP script, it belongs in the
    *.tab files (closes: #212213).
  * [Roland] Fixed -request alias for Mailman (closes: #213160).
  * [Roland] Index page is now customisable (in
    /etc/gforge/custom/index_std.php) (and the default version differs
    from the gforge.org home page).  Patch from Francisco Gimeno.
  * [Roland] Fixed images alias for Mailman (closes: #213052).

 -- Roland Mas <lolando@debian.org>  Mon,  6 Oct 2003 16:27:38 +0200

gforge (3.0-7) unstable; urgency=low

  * [Roland] Added 20030822.sql.
  * [Roland] Added scripts to generate a /var/lib/gforge/etc/httpd.vhosts
    file from the database and use that, so projects can use virtual hosts
    other than <projectname>.<domainname>.  Added a
    /etc/gforge/templates/httpd.vhosts.template file, too.
  * [Roland] Bumped Standards-Version: to 3.6.1 (no changes needed).
  * [Christian] Applied Joo-won Jung ldap patch [#507] to correct bad ldap
    init
  * [Christian] Applied Vicente J. Ruiz Jurado patch [ #430 ] mailman +
    postfix to correct postfix setup (untested)
  * [Christian] Applied Antoine Nivard suggestion to correct [ #505 ]
    Disable Tracker and the "TAB" is not disable / error in Layout.class
  * [Roland] Added "objectclass: domain" to the top-level LDAP object when
    it's not the same as the top-level LDAP object created by slapd, see