@@ -2,8 +2,10 @@ gforge (3.0-9+1) unstable; urgency=low
 
   * [Roland] Patch #558 from Patrick McFarland to fix hardwiring problem
     in install-db.sh.
+  * [Roland] Patch #561 from Patrick McFarland to fix "access to *'" bug
+    in install-ldap.sh.
 
- -- Roland Mas <lolando@debian.org>  Sun, 19 Oct 2003 21:55:23 +0200
+ -- Roland Mas <lolando@debian.org>  Sun, 19 Oct 2003 22:03:36 +0200
 
 gforge (3.0-9) unstable; urgency=low
 
